# screenshot-client

./: .gitignore  CLAUDE.md  README.md  build.ps1  package-lock.json  package.json  preview.html  preview.ts  vite.config.ts
.claude/: settings.local.json
docs/: deployment-guide.md  screenshot-upload-design.md  user-manual.md
docs/api-docs/: device-file-upload-api-for-client.md  file-upload-api.md  inspection-api.md  rust-client-video-api.md  软件使用数据推送接口文档.md
docs/plans/: 2026-02-28-screenshot-client-design.md  2026-03-02-screenshot-client-ui-redesign.md  2026-03-03-camera-capture-design.md  2026-03-05-background-service-design.md
src/: App.css  App.tsx  DeviceSetupNative.tsx  DeviceSetupWrapper.tsx  NativeDeviceSetup.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/monitor/: mod.rs  process_monitor.rs  session_manager.rs  sync_scheduler.rs  windows_api.rs
src/components/: Dashboard.tsx  DeviceInfoCard.tsx  SoftwareUsageList.tsx  ThemeToggle.tsx  VideoPreview.tsx
src/contexts/: ThemeContext.tsx
