[package]
name = "screenshot-client"
version = "0.1.0"
description = "智能黑板截图客户端"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "screenshot_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
screenshots = "0.8"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
base64 = "0.22"
dirs = "5"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
sysinfo = "0.30"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_Storage_FileSystem",
] }

